# kirigami

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  kirigami.qdoc  kirigami.qdocconf  kirigami.qrc  kirigami.qrc.in
autotests/: CMakeLists.txt  tst_ImageColors.qml  tst_columnview.qml  tst_mnemonicdata.qml  tst_pageStackAttached.qml
examples/settingscomponents/: GeneralSettingsPage.qml  SettingsPage.qml  main.qml
examples/simpleexamples/: Sidebar.qml
poqm/ar/: libkirigami2plugin_qt.po
poqm/ca/: libkirigami2plugin_qt.po
poqm/ca@valencia/: libkirigami2plugin_qt.po
poqm/cs/: libkirigami2plugin_qt.po
poqm/de/: libkirigami2plugin_qt.po
poqm/eo/: libkirigami2plugin_qt.po
poqm/fi/: libkirigami2plugin_qt.po
poqm/fr/: libkirigami2plugin_qt.po
poqm/ga/: libkirigami2plugin_qt.po
poqm/gl/: libkirigami2plugin_qt.po
poqm/it/: libkirigami2plugin_qt.po
poqm/ja/: libkirigami2plugin_qt.po
poqm/ko/: libkirigami2plugin_qt.po
poqm/nb/: libkirigami2plugin_qt.po
poqm/nn/: libkirigami2plugin_qt.po
poqm/pl/: libkirigami2plugin_qt.po
poqm/sk/: libkirigami2plugin_qt.po
src/: CMakeLists.txt  desktopicon.cpp  icon.cpp  imagecolors.cpp  imagecolors.h  kirigami-index.qdoc  kirigami.qdoc  kirigami.qdocconf  kirigamiplugin.cpp  mnemonicattached.cpp  mnemonicattached.h  overlayzstackingattached.h  pagepool.h  plugins.qmltypes  qmldir  scenepositionattached.cpp  scenepositionattached.h  spellcheckattached.h  spellcheckinghint.h  toolbarlayout.cpp  wheelhandler.cpp  wheelhandler.h
src/contentitems/: ActionTextField.qml  CMakeLists.txt  Heading.qml  IconTitleSubtitle.qml  InlineMessage.qml  InlineViewHeader.qml  LinkButton.qml  ListItemDragHandle.qml  ListSectionHeader.qml  LoadingPlaceholder.qml  PasswordField.qml  PlaceholderMessage.qml  SearchField.qml  SelectableLabel.qml  TitleSubtitle.qml  UrlButton.qml
src/controls/: AboutItem.qml  AboutPage.qml  AbstractApplicationItem.qml  AbstractApplicationWindow.qml  Action.qml  ActionList.qml  ActionTextField.qml  ActionToolBar.qml  ActionsListView.qml  ApplicationItem.qml  ApplicationWindow.qml  Avatar.qml  Badge.qml  CMakeLists.txt  Card.qml  Chip.qml  ColoredBadgeLabel.qml  ContextDrawer.qml  ContextualHelpButton.qml  FormLayoutPage.qml  GlobalDrawer.qml  Heading.qml  HybridPageStack.qml  InlineMessage.qml  InlineViewHeader.qml  LinkButton.qml  ListItemDragHandle.qml  ListSectionHeader.qml  LoadingPlaceholder.qml  NavigationTabBar.qml  NavigationTabButton.qml  OverlayDrawer.qml  OverlaySheet.qml  Page.qml  PagePoolAction.qml  PageRow.qml  PasswordField.qml  PlaceholderMessage.qml  ScrollablePage.qml  SearchField.qml  (+8 more)
src/controls/private/: ActionMenuItem.qml  BannerImage.qml  ChildrenDialog.qml  DefaultChipBackground.qml  GlobalDrawerActionItem.qml  PassiveNotificationsManager.qml  PrivateActionToolButton.qml
src/controls/private/globaltoolbar/: AbstractPageHeader.qml  BreadcrumbControl.qml  HandleButton.qml  NavigationButtons.qml  PageRowGlobalToolBarStyleGroup.qml  PageRowGlobalToolBarUI.qml  ToolBarPageFooter.qml  ToolBarPageHeader.qml
src/controls/private/hybridpagestack/: PageContainer.qml  PageHeader.qml
src/controls/settingscomponents/: CategorizedSettings.qml  SettingAction.qml
src/controls/styles/basic/: CMakeLists.txt  PageRow.qml
src/controls/styles/basic/private/: PrivateActionToolButton.qml
src/controls/styles/basic/private/globaltoolbar/: PageRowGlobalToolBarUI.qml
src/controls/styles/org.kde.desktop/: AbstractApplicationHeader.qml
src/controls/templates/: AbstractApplicationHeader.qml  AbstractCard.qml  Chip.qml  InlineMessage.qml  OverlayDrawer.qml  OverlaySheet.qml  qmldir
src/controls/templates/private/: BackButton.qml  ForwardButton.qml  IconPropertiesGroup.qml  ScrollView.qml
src/delegates/: CMakeLists.txt  CheckSubtitleDelegate.qml  IconTitleSubtitle.qml  RadioSubtitleDelegate.qml  SubtitleDelegate.qml  SwitchSubtitleDelegate.qml  TitleSubtitle.qml  TitleSubtitleWithActions.qml  TitleWithActions.qml  TitleWithActionsDelegate.qml
src/dialogs/: CMakeLists.txt  Dialog.qml  DialogButtonContent.qml  DialogCustomButtonBox.qml  DialogFooter.qml  DialogHeader.qml  DialogHeaderTopContent.qml  MenuDialog.qml  PromptDialog.qml  SearchDialog.qml  SingleSelectListView.qml
src/forms/: CMakeLists.txt  formalignmentgroup.cpp  formalignmentgroup_p.h  kirigamiformsplugin.cpp
src/forms/cards/: Form.qml  FormAction.qml  FormEntry.qml  FormGroup.qml  FormLayout2.qml  FormSeparator.qml
src/forms/flat/: Form.qml  FormAction.qml  FormEntry.qml  FormGroup.qml  FormLayout2.qml  FormSeparator.qml
src/forms/hybrid/: FormAction.qml  FormEntry.qml  FormGroup.qml  FormLayout2.qml
src/forms/templates/: Form.qml  FormAction.qml  FormEntry.qml  FormGroup.qml  FormSeparator.qml
src/layouts/: CMakeLists.txt  ColumnViewSeparator.qml  FormLayout.qml  columnview.cpp  columnview.h  columnview_p.h  formlayoutattached.h  headerfooterlayout.h  padding.h  pagestackattached.cpp  pagestackattached.h  toolbarlayout.cpp  toolbarlayout.h  toolbarlayoutdelegate.cpp  toolbarlayoutdelegate.h
src/platform/: CMakeLists.txt  basictheme.cpp  basictheme_p.h  colorutils.h  kirigamiplatform.qdoc  kirigamiplatform.qdocconf  platformpluginfactory.h  platformtheme.cpp  platformtheme.h  settings.cpp  settings.h  styleselector.cpp  styleselector.h  tabletmodewatcher.h  units.h  virtualkeyboardwatcher.h
src/polyfill/: CMakeLists.txt
src/primitives/: Separator.qml  ShadowedImage.qml  icon.cpp  icon.h  shaders.cmake  shadowedrectangle.cpp  shadowedrectangle.h  shadowedtexture.cpp
src/primitives/scenegraph/: shadermaterial.cpp  shadermaterial.h  shadernode.cpp  shadernode.h  (+4 more)
src/styles/: CMakeLists.txt
src/styles/Material/: CMakeLists.txt  Theme.qml
src/styles/org.kde.desktop/: CMakeLists.txt  Theme.qml
src/templates/: AbstractApplicationHeader.qml  Badge.qml  CMakeLists.txt  NavigationTabBar.qml  NavigationTabButton.qml  OverlayDrawer.qml  OverlaySheet.qml  PlaceholderMessage.qml  qmldir
templates/kirigami/: kirigami.kdevtemplate
tests/: BadgeTest.qml  ColoredBadgeTest.qml  declarativePageRow.qml
(+6 files in other folders)
